# niftyled

./: .indent.pro  AUTHORS  ChangeLog  Doxyfile  Doxyfile.in  INSTALL  Makefile.am  NEWS  README  README.deb  README.md  README.win32  autogen-win32  configure.ac  niftyled.pc.in  version  version.sh
debian/: README.Debian  README.source  changelog  changelog.in  control.tmpl.in  copyright  docbase.in  libniftyled-dev.install  libniftyled.install  libniftyled1.dirs  libniftyled1.install  rules.tmpl.in  symbols  watch.in
distros/ubuntu/: create-ubuntu-deb
distros/ubuntu/debian/: README.Debian  control  control.in  copyright  docs
doc/: Doxyfile.in  Makefile.am
examples/: Makefile.am  RGB_16bit.xml  monochrome_8bit.xml  no_mapping_monochrome.xml  no_mapping_monochrome_8bit.xml
gentoo/dev-libs/niftyled/: niftyled-9999.ebuild.in
gentoo/media-gfx/niftyled/: metadata.xml  niftyled-9999.ebuild.in
include/: Makefile.am  chain.h  fps.h  frame.h  hardware.h  nifty-primitives.h  niftyled-chain.h  niftyled-fps.h  niftyled-frame.h  niftyled-hardware.h  niftyled-led.h  niftyled-pixel_format.h  niftyled-prefs.h  niftyled-prefs_chain.h  niftyled-prefs_hardware.h  niftyled-prefs_led.h  niftyled-prefs_setup.h  niftyled-prefs_tile.h  niftyled-setup.h  niftyled-tile.h  niftyled-version.h.in  niftyled.h  niftyled_version.h.in  pixel_format.h  settings.h  settings_chain.h  settings_hardware.h  settings_tile.h  tile.h
src/: Makefile.am  Makefile.global.am  _chain.h  _prefs_setup.h  _relation.h  _thread.h  chain.c  fps.c  frame.c  hardware.c  pixel_format.c  prefs.c  prefs_chain.c  prefs_hardware.c  prefs_setup.c  prefs_tile.c  relation.c  settings.c  settings_chain.c  settings_tile.c  setup.c  thread.c  tile.c  version.c  version.c.in
src/chain/: Makefile.am  _chain.h  chain.c
src/frame/: Makefile.am  _frame.h  fps.c  frame.c  pixel_format.c
src/hardware/: Makefile.am  _hardware.h  hardware.c
src/led/: Makefile.am  _led.h  led.c
src/prefs/: Makefile.am  _prefs_chain.h  _prefs_hardware.h  _prefs_led.h  _prefs_setup.h  _prefs_tile.h  prefs.c  prefs_chain.c  prefs_hardware.c  prefs_led.c  prefs_setup.c  prefs_tile.c
src/setup/: Makefile.am  _setup.h  setup.c
src/tile/: Makefile.am  _tile.h  tile.c
src/util/: Makefile.am  _relation.h  _thread.h  relation.c  thread.c
tests/: Makefile.am  mapping.c  tests.env
utils/: Makefile.am
utils/ledset/: Makefile.am  ledset.c
