# libniftyled Makefile.am - v0.2 - Daniel Hiepler <daniel@niftylight.de>

SUBDIRS =

# name of directory to create inside {prefix}/include/ 
library_includedir = $(includedir)/lib$(PACKAGE)-$(PACKAGE_MAJOR_VERSION).$(PACKAGE_MINOR_VERSION)

# headers to install 
library_include_HEADERS = \
	niftyled.h \
	niftyled_version.h \
	tile.h \
	chain.h \
	hardware.h \
	frame.h \
	pixel_format.h \
	fps.h \
	settings.h \
	settings_tile.h \
	settings_chain.h \
	settings_hardware.h

