# libniftyled Makefile.am - v0.3 - Daniel Hiepler <daniel@niftylight.de>

SUBDIRS =

# name of directory to create inside {prefix}/include/ 
library_includedir = $(includedir)/lib$(PACKAGE)-$(PACKAGE_MAJOR_VERSION).$(PACKAGE_MINOR_VERSION)

# headers to install 
library_include_HEADERS = \
	niftyled.h \
	niftyled-version.h \
	niftyled-led.h \
	niftyled-chain.h \
	niftyled-tile.h \
	niftyled-hardware.h \
	niftyled-setup.h \
	niftyled-frame.h \
	niftyled-pixel_format.h \
	niftyled-fps.h \
	niftyled-prefs.h \
	niftyled-prefs_led.h \
	niftyled-prefs_tile.h \
	niftyled-prefs_chain.h \
	niftyled-prefs_hardware.h \
	niftyled-prefs_setup.h
