# libniftyled Makefile.am - v0.3 - Daniel Hiepler <daniel@niftylight.de> 

include ../Makefile.global.am


# targets
noinst_LTLIBRARIES = libchain.la

# sources
libchain_la_SOURCES = \
	chain.c

# cflags 
libchain_la_CFLAGS = \
	$(COMMON_CFLAGS_N)

# linker flags
libchain_la_LDFLAGS = \
	$(COMMON_LDFLAGS_N)
