#############
# libniftyled Makefile.am
# v0.4 - Daniel Hiepler <daniel@niftylight.de>


include $(top_srcdir)/src/Makefile.global.am


# targets
noinst_LTLIBRARIES = libframe.la

# sources
libframe_la_SOURCES = \
	fps.c \
	pixel_format.c \
	frame.c

# cflags
libframe_la_CFLAGS = \
	$(COMMON_CFLAGS_N)

# linker flags
libframe_la_LDFLAGS = \
	$(COMMON_LDFLAGS_N)
