# libniftyled Makefile.am - v0.3 - Daniel Hiepler <daniel@niftylight.de> 

include ../Makefile.global.am


# targets
noinst_LTLIBRARIES = libprefs.la

# sources
libprefs_la_SOURCES = \
	prefs.c \
	prefs_chain.c \
	prefs_hardware.c \
	prefs_setup.c \
	prefs_tile.c

# cflags 
libprefs_la_CFLAGS = \
	$(COMMON_CFLAGS_N)

# linker flags
libprefs_la_LDFLAGS = \
	$(COMMON_LDFLAGS_N)
