# libniftyled Makefile.am - v0.3 - Daniel Hiepler <daniel@niftylight.de> 

include ../Makefile.global.am


# targets
noinst_LTLIBRARIES = libtile.la

# sources
libtile_la_SOURCES = \
	tile.c

# cflags 
libtile_la_CFLAGS = \
	$(COMMON_CFLAGS_N)

# linker flags
libtile_la_LDFLAGS = \
	$(COMMON_LDFLAGS_N)
